[gd_scene load_steps=7 format=3 uid="uid://cqm2sxhj3jfmd"]

[ext_resource type="Script" uid="uid://cut2nmmfqsy3s" path="res://PlayScreen.gd" id="1_r8xdl"]
[ext_resource type="PackedScene" uid="uid://cyjkxr82hxhf8" path="res://gameboard/scenes/GameBoard.tscn" id="2_gameboard"]
[ext_resource type="Theme" uid="uid://be8grmawpb7cm" path="res://theme/default_theme.tres" id="3_theme"]
[ext_resource type="PackedScene" uid="uid://b4n8x7j1k2nap" path="res://ui/RewardButton.tscn" id="4_reward_scene"]
[ext_resource type="PackedScene" uid="uid://c7p5yaj2k8m4q" path="res://ui/ShuffleButton.tscn" id="5_shuffle_scene"]
[ext_resource type="PackedScene" uid="uid://cf8e6nu3xwb1" path="res://ui/HomeButton.tscn" id="6_home_scene"]

[node name="PlayScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_theme")
script = ExtResource("1_r8xdl")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.917088, 0.924742, 0.951498, 1)

[node name="Dashboard" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.208
offset_bottom = -3.0
grow_horizontal = 2

[node name="MovesLabel" type="Label" parent="Dashboard"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.75
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -10.0
theme_override_font_sizes/font_size = 28
text = "MOVES LEFT: 50"
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Dashboard"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 28
text = "SCORE: 0"
vertical_alignment = 1

[node name="ControlButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RewardButton" parent="ControlButtons" instance=ExtResource("4_reward_scene")]
layout_mode = 2
size_flags_horizontal = 0

[node name="Spacer1" type="Control" parent="ControlButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShuffleButton" parent="ControlButtons" instance=ExtResource("5_shuffle_scene")]
layout_mode = 2
size_flags_horizontal = 0

[node name="Spacer2" type="Control" parent="ControlButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HomeButton" parent="ControlButtons" instance=ExtResource("6_home_scene")]
layout_mode = 2
size_flags_horizontal = 0

[node name="GameArea" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.208
anchor_right = 1.0
anchor_bottom = 0.9
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="GameArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameBoard" parent="GameArea/CenterContainer" instance=ExtResource("2_gameboard")]
layout_mode = 2

[node name="GameLostDialog" type="AcceptDialog" parent="."]
title = "Game Over"
initial_position = 2
size = Vector2i(450, 250)

[node name="VBox" type="VBoxContainer" parent="GameLostDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[node name="MessageLabel" type="Label" parent="GameLostDialog/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "No More Moves!"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="GameLostDialog/VBox"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="GameLostDialog/VBox/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "RESTART"

[node name="FineButton" type="Button" parent="GameLostDialog/VBox/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "FINE"

[connection signal="reward_pressed" from="ControlButtons/RewardButton" to="." method="_on_reward_button_pressed"]
[connection signal="shuffle_pressed" from="ControlButtons/ShuffleButton" to="." method="_on_reset_button_pressed"]
[connection signal="home_pressed" from="ControlButtons/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="GameLostDialog/VBox/ButtonContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameLostDialog/VBox/ButtonContainer/FineButton" to="." method="_on_fine_button_pressed"]
